Add several changes
-  Add media quaries for the calculator project

- Alter some of the CSS/HTML, add media quaries and mobile event listeners to the etch-a-sletch project

--- a/calculator/styles.css
+++ b/calculator/styles.css
@@ -112,3 +112,15 @@ body {
 .num-0 {
     grid-area: zero;
 }
+
+@media only screen and (max-width: 600px) {
+
+    .title {
+        font-size: 4rem;
+    }
+
+    .wrapper {
+        height: 500px;
+        width: 350px;
+    }
+}
