--- a/etch-a-sketch/styles.css
+++ b/etch-a-sketch/styles.css
@@ -8,23 +8,20 @@
     text-decoration: none;
 }
 
-html {
-    background: linear-gradient(45deg, #000000, #434343);
-    height: 100%;
-}
-
 body {
-    height: 100%;
+    height: 100vh;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     font-family: 'Bungee Spice', sans-serif;
+    background: linear-gradient(45deg, #000000, #434343);
 }
 
 
 .title-container {
-    width: 800px;
+    width: 100%;
     height: 200px;
     display: flex;
     flex-direction: column;
@@ -36,7 +33,7 @@ body {
 
 .title {
     margin: 0 auto;
-    font-size: 80px;
+    font-size: 5rem;
     letter-spacing: 1.5px;
 }
 
@@ -60,14 +57,14 @@ body {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    gap: 30px;
+    gap: 2rem;
     margin-top: 30px;
 }
 
 button {
     height: 60px;
     width: 120px;
-    font-size: 18px;
+    font-size: 1.1rem;
     font-weight: 600;
     cursor: pointer;
     border-radius: 5px;
@@ -127,4 +124,56 @@ button:active {
 
 .letter-5 {
     color: plum;
+}
+
+@media only screen and (max-width: 800px) {
+
+    .title {
+        font-size: 4rem;
+    }
+
+    .board {
+        width: 550px;
+        height: 550px;
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+
+    .title {
+        font-size: 3rem;
+    }
+
+    .board {
+        width: 450px;
+        height: 450px;
+    }
+
+    .btn-container {
+        width: 400px;
+        gap: 1rem;
+    }
+
+    .btn {
+        height: 45px;
+        width: 100px;
+        font-size: 1rem;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+
+    .title {
+        font-size: 3rem;
+    }
+
+    .board {
+        width: 350px;
+        height: 350px;
+    }
+
+    .btn-container {
+        width: 350px;
+    }
 }
