--- a/etch-a-sketch/styles.css
+++ b/etch-a-sketch/styles.css
@@ -165,12 +165,18 @@ button:active {
 @media only screen and (max-width: 500px) {
 
     .title {
-        font-size: 3rem;
+        font-size: 2.4rem;
     }
 
     .board {
         width: 350px;
         height: 350px;
+    }
+
+    .size-btn {
+        height: 40px;
+        width: 100px;
+        font-size: 1rem;
     }
 
     .btn-container {
