--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
     justify-content: end;
     background: #0F0F0F;
     padding-right: 50px;
+    z-index: 1;
 }
 
 .nav-ul,
@@ -132,6 +133,9 @@ body {
 
 .title-wrapper-html {
     grid-area: title-html;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .from {
@@ -256,9 +260,34 @@ body {
     padding: 0 10px;
 }
 
+@media (prefers-reduced-motion) {
+    .hidden {
+        transition: none;
+    }
+}
+
 @media (max-width: 1400px) {
     html {
         font-size: 75%;
+    }
+}
+
+@media (max-width: 1200px) {
+    .work-wrapper {
+        display: grid;
+        grid-template-columns: repeat(2, minmax(250px, 1fr));
+        grid-template-rows: repeat(5, 1fr);
+        grid-template-areas:
+            "title-html title-html"
+            "form landing-page"
+            "technical-doc tribute-page"
+            "calc quote"
+            "sketch .";
+        justify-items: center;
+        align-items: center;
+        row-gap: 40px;
+        column-gap: 40px;
+        padding: 20px 0;
     }
 }
 
