--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -22,6 +22,10 @@ body {
     font-size: 5rem;
     color: #f5f5f5;
     font-family: 'Nabla', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px
 }
 
 .board {
@@ -95,10 +99,6 @@ body {
     color: white;
     font-size: 5rem;
     flex-direction: column;
-}
-
-.message {
-    font-size: ;
 }
 
 .restart {
