--- a/tic-tac-toe/styles.css
+++ b/tic-tac-toe/styles.css
@@ -7,6 +7,10 @@
     text-decoration: none;
 }
 
+html {
+    font-size: 100%;
+}
+
 body {
     height: 100vh;
     background: linear-gradient(to right, #141e30, #243b55);
@@ -38,8 +42,8 @@ body {
 }
 
 .square {
-    min-height: 150px;
-    min-width: 150px;
+    height: 150px;
+    width: 150px;
     border: solid #232526 3px;
     display: flex;
     justify-content: center;
@@ -111,4 +115,51 @@ body {
 
 .show {
     display: flex;
+}
+
+.score-container {
+    background-color: #f5f5f5;
+    width: 200px;
+    padding: 10px 10px;
+    border-radius: 8px;
+}
+
+.score {
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    gap: 10px;
+}
+
+.score-reset {
+    height: 40px;
+    width: 150px;
+    font-size: 1.4rem;
+    font-weight: 600;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.score-reset:hover {
+    background-color: #000;
+    color: #fff;
+    border: #fff 1px solid;
+}
+
+.score-reset:active {
+    transform: translateY(4px);
+}
+
+@media (max-width: 480px) {
+
+    .game-title {
+        font-size: 4rem;
+    }
+
+    .square {
+        height: 115px;
+        width: 115px;
+    }
 }
