--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik+Lines&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,300;1,300&display=swap');
 
 * {
     margin: 0;
@@ -64,7 +64,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(180deg, #0F0F0F, #185a3f, #0F0F0F);
+    background: linear-gradient(180deg, #0F0F0F, #19573d, #0F0F0F);
     padding: 0 40px;
     gap: 50px;
 }
@@ -103,10 +103,10 @@ body {
     color: antiquewhite;
     font-size: 2.5rem;
     font-weight: 300;
+    font-family: 'Anton', sans-serif;
     font-style: italic;
-    text-shadow: 1px 1px 2px #000000;
-    font-family: 'Rubik Lines', sans-serif;
-    letter-spacing: 1px;
+    letter-spacing: 1.5px;
+    text-shadow: 2px 2px 4px #000000;
 }
 
 .contact-btn {
@@ -340,6 +340,10 @@ body {
 }
 
 @media (max-width: 1200px) {
+
+    html {
+        font-size: 70%;
+    }
 
     #about {
         flex-direction: column;
