--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
     align-items: center;
     color: antiquewhite;
     height: 100%;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     padding: 0 20px;
     transition: background-color 1s ease;
 }
@@ -382,17 +382,13 @@ body {
 
 @media (max-width: 980px) {
     html {
-        font-size: 55%;
+        font-size: 65%;
     }
 
     .nav-bar {
         justify-content: center;
         align-items: center;
         padding: 0;
-    }
-
-    .section-link {
-        font-size: 2rem;
     }
 
     .work-wrapper {
@@ -442,7 +438,7 @@ body {
 
 @media (max-width: 780px) {
     html {
-        font-size: 50%;
+        font-size: 60%;
     }
 
     .nav-bar {
@@ -470,10 +466,6 @@ body {
         row-gap: 20px;
     }
 
-    .img-caption {
-        padding: 10px 0;
-    }
-
     .main-content-html-title {
         margin-top: 30px;
         padding: 0;
@@ -498,11 +490,25 @@ body {
 
 @media (max-width: 580px) {
     html {
-        font-size: 30%;
+        font-size: 55%;
+    }
+
+    #about {
+        gap: 20px;
+    }
+
+    .call-to-action {
+        font-size: 2rem;
+    }
+
+    .profile {
+        width: 180px;
+        height: auto;
     }
 
     .author {
         text-align: center;
+        margin-top: 5px;
     }
 }
 
