--- a/form/survey-form.css
+++ b/form/survey-form.css
@@ -24,7 +24,7 @@ body {
     justify-content: center;
     align-items: center;
     background-image: linear-gradient(190deg, rgba(58, 58, 58, 0.8), rgba(100, 120, 170, 0.7)),
-        url(survey-form-background.jpg);
+        url(survey-form-background.webp);
     color: white;
     background-attachment: fixed;
     background-size: cover;
