--- a/landing-page/landing-page.css
+++ b/landing-page/landing-page.css
@@ -21,7 +21,7 @@ body {
   font-size: 100%;
   font-family: 'Poppins', sans-serif;
   background: linear-gradient(115deg, rgba(58, 58, 58, 0.9),
-      rgba(120, 150, 195, 0.7)), url(yu-gi-oh!-background.jpg) no-repeat center center/cover;
+      rgba(120, 150, 195, 0.7)), url(yu-gi-oh!-background.webp) no-repeat center center/cover;
   background-attachment: fixed;
 }
 
