--- a/landing-page/landing-page.css
+++ b/landing-page/landing-page.css
@@ -5,14 +5,8 @@
   text-decoration: none;
 }
 
-/* 
-    font size for easy rem calculations
-    default document font size = 16px, 1rem = 16px, 100% = 16px
-    (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
-*/
-
 html {
-  font-size: 62.5%;
+  font-size: 75%;
   scroll-behavior: smooth;
 }
 
@@ -30,6 +24,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 5px;
 }
 
 #header {
@@ -188,11 +183,13 @@ a:hover {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  gap: 20px;
   border: none;
   border-radius: 5px;
   box-shadow: 5px 5px 5px #000;
-  height: 300px;
-  width: 50rem;
+  width: 45rem;
+  height: auto;
+  padding: 20px 0;
   background-color: rgba(220, 220, 220, 0.6);
   color: #000;
 }
@@ -259,17 +256,22 @@ a:hover {
 
 @media (max-width: 1200px) {
   html {
-    font-size: 60%;
+    font-size: 75%;
   }
 
   header {
     flex-wrap: wrap;
   }
+
+  #pricing {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 @media (max-width: 980px) {
   html {
-    font-size: 55%;
+    font-size: 70%;
   }
 
   .img-logo {
@@ -296,5 +298,10 @@ a:hover {
 @media (max-width: 460px) {
   html {
     font-size: 50%;
+  }
+
+  .prices {
+    width: 40rem;
+    gap: 10px;
   }
 }
