--- a/todo-list/styles.css
+++ b/todo-list/styles.css
@@ -13,7 +13,7 @@ body {
     align-items: center;
     font-family: 'Poppins', sans-serif;
     padding: 0.5rem 1rem;
-    background: linear-gradient(45deg, rgba(58, 58, 58, .5), rgba(120, 150, 195, .1)) fixed, url(/My-projects/todo-list/office-background.jpg) center center/cover no-repeat fixed
+    background: linear-gradient(45deg, rgba(58, 58, 58, .5), rgba(120, 150, 195, .1)) fixed, url(office-background.jpg) center center/cover no-repeat fixed
 }
 
 .all-projects {
